--- a/templates/condos/kkn.html
+++ b/templates/condos/kkn.html
@@ -1,1 +1,194 @@
-<h1>KKN Page</h1>
+<!DOCTYPE html>
+{% load static %}
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="{% static 'css/kkn.css' %}">
+</head>
+<body>
+  <div class="info-photos">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox" style=" width:100%; height: 500px !important;">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="{% static 'imgs/condos/kihei_kai_nani/bedroom_one.jpg' %}" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="{% static 'imgs/condos/kihei_kai_nani/bath_one.jpg' %}" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="{% static 'imgs/condos/kihei_kai_nani/kitchen_dinning.jpg' %}" alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+
+  <div class="container">
+    <h2>Kihei Kai Nani</h2>
+    <div class="info-container">
+      <div class="info-title">
+        <h4>Description</h4>
+      </div>
+
+      <div class="info-content">
+        <p>Our 1 bed/ 1 bath, 621 sqft ground floor condo features a relaxing 4 poster
+        queen size bed with high thread count Egyptian cotton sheets. Our fully
+        equipped kitchen with a microwave, coffee maker, blender, toaster, all
+        cookware, glassware and utensils offers the convenience to prepare full
+        meals and store leftovers from neighboring restaurants. The recently
+        remodeled bathroom features a new Delta In2ition 2-in-1 shower head with an
+        easy to use detachable hand shower.</p>
+
+        <p>The LED HD TV and free cable television will ensure you don't miss the big
+        game during your vacation. The Blu-ray DVD player and free Netflix streaming
+        service provide a large library of movies and TV shows plus the large
+        selection of Netflix kid friendly shows will sure to be a hit with the
+        keikis.  Other free services include wired and wireless broadband internet,
+        streaming Pandora Radio, local telephone and 411 information services. </p>
+
+        <p>Comfortable furnishings include a comfortable queen size sofa sleeper,
+        ceiling fans in the living area and bedroom, cool tile floors and fresh
+        clean linens and towels.</p>
+
+        <p>To help you pack less and make your beach excursions more enjoyable, we have
+        a complete set of beach gear available for your use. Beach chairs, coolers,
+        beach umbrella, beach mats, sand toys, beach towels, beach bag and body
+        boards are ready for you to take to the beach.</p>
+
+        <p>The Kihei Kai Nani is nestled across the street from Kamaole II Beach, which
+        is a long stretch of beach with soft sand, a gentle slope into the water and
+        excellent snorkeling and swimming. Come sundown, Kamaole II Beach is a
+        picturesque spot to view breathtaking sunsets.  Surrounding the Kihei Kai Nani
+         are several restaurants, cafes and shops all within walking distance.</p>
+      </div>
+
+      <div class="video">
+        <p>How close are we to the beach?  Watch the video below!</p>
+         <iframe width="560" height="315" src="https://www.youtube.com/embed/xPssDkHuEys"
+         frameborder="0" allowfullscreen></iframe>
+       </div>
+    </div>
+
+    <div class="amenities-container">
+      <div class="amenities-title">
+        <h4>Amenities</h4>
+      </div>
+      <div class="sleeping">
+        <h5><i class="fa fa-bed" aria-hidden="true"></i> Sleeping</h5>
+        <p>1 Queen Bed and 1 Queen Pull Out Sofa Bed<br>Comfortably Sleeps 4 Adults</p>
+      </div>
+      <div class="bath">
+        <h5><i class="fa fa-bath" aria-hidden="true"></i> Bath</h5>
+        <p>Full Bathroom with Shower/Tub Combo, Delta In2ition 2-in-1 Shower Head with an
+        Easy to Use Detachable Hand Shower</p>
+      </div>
+      <div class="entertainment">
+        <h5><i class="fa fa-television" aria-hidden="true"></i> Entertainment</h5>
+        <p>LED TV, Smart Blu-ray DVD Player, Free Cable TV, Free Streaming Netflix, Board Games and Books.</p>
+      </div>
+      <div class="networking">
+        <h5><i class="fa fa-wifi" aria-hidden="true"></i> Internet</h5>
+        <p>Free High Speed Wireless Internet</p>
+      </div>
+      <div class="phone">
+        <h5><i class="fa fa-phone" aria-hidden="true"></i> Telephone</h5>
+        <p>Telephone with Free Calls to US and Canada</p>
+      </div>
+      <div class="kitchen">
+        <h5><i class="fa fa-cutlery" aria-hidden="true"></i> Kitchen Items</h5>
+        <p>Coffee Maker, Full Set of Pots and Pans, Wok, Rice Maker, Tea Pot, Stove, Oven, Microwave, Blender, Toaster, Assorted Cooking Utensils, Cutlery, Cutting Boards, Eating Utensils, Platic Drink and Food Containers</p>
+      </div>
+      <div class="beach-items">
+        <h5><i class="fa fa-sun-o" aria-hidden="true"></i> Beach Items</h5>
+        <p>Coolers, Beach Towels, Beach Chairs, Beach Umbrella, Beach Bag, Plastic Containers for Drinks and Food</p>
+      </div>
+      <div class="ac">
+        <h5><i class="fa fa-snowflake-o" aria-hidden="true"></i> Cooling</h5>
+        <p>Air Conditioner and Ceiling Fans</p>
+      </div>
+    </div>
+
+    <div class="facilities-container">
+      <div class="facilities-title">
+        <h4>Facilities</h4>
+      </div>
+      <div class="parking">
+        <h5><i class="fa fa-car" aria-hidden="true"></i> Parking</h5>
+        <p>Free Parking</p>
+      </div>
+      <div class="laundry">
+        <h5><i class="fa fa-info-circle" aria-hidden="true"></i> Laundry</h5>
+        <p>Coin Operated Laundry Facility is in the Office Building Across the Parking Lot from our Condo</p>
+      </div>
+      <div class="outside">
+        <h5><i class="fa fa-sun-o" aria-hidden="true"></i> Outside Features</h5>
+        <p>Large Swimming Pool, Gas Grills, Lush Tropical Landscaping, Shuffle Board, Pavilion Deck</p>
+      </div>
+    </div>
+
+    <div class="policies-container">
+      <div class="policies-title">
+        <h4>Policies</h4>
+      </div>
+      <div class="check-in">
+        <h5><i class="fa fa-sign-in" aria-hidden="true"></i> Check-in</h5>
+        <p>3:00 PM with Late Check-out Options Available</p>
+      </div>
+      <div class="check-out">
+        <h5><i class="fa fa-sign-out" aria-hidden="true"></i> Check-out</h5>
+        <p>11:00 AM</p>
+      </div>
+      <div class="info">
+        <h5><i class="fa fa-info" aria-hidden="true"></i> Misc Info</h5>
+        <p>Pets Not Allowed, No Smoking, Credit Cards Accepted, Kid Friendly</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer">
+    <div class="footer-box">
+      <h4>Our VRBO Listings</h4>
+      <a href="https://www.vrbo.com/406623">Kihei Kai Nani</a><br>
+      <a href="https://www.vrbo.com/858569">Pacific Shores</a>
+    </div>
+    <div class="footer-box">
+      <h4>Contact Us</h4>
+      <a href="mailto:jeremy@stayinkihei.com" target="_top">jeremy@stayinkihei.com</a>
+      <p>(303)328-7705</p>
+    </div>
+    <div class="footer-box">
+      <h4>Social Media</h4>
+      <p>facebook</p>
+      <p>youtube</p>
+    </div>
+    <div id="tax-box" class="footer-box">
+      <h4>On Island Manager and Host</h4>
+      <a href="http://sunnymauivacations.com/">Sunny Maui Vacations</a>
+      <p>General Excise Tax - GE-105-098-2400-01<br>
+               Transient Accommodations - TA-105-098-2400-01</p>
+    </div>
+
+
+
+</body>
+</html>
