--- a/templates/condos/kkn.html
+++ b/templates/condos/kkn.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html
 {% load static %}
 <html lang="en">
 <head>
@@ -11,25 +11,28 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="{% static 'css/kkn.css' %}">
+  <link rel="stylesheet" href="{% static 'css/condos.css' %}">
 </head>
 <body>
-  <div class="info-photos">
+  <header id="showcase">
+    <h1>Kihei Kai Nani</h1>
+  </header>
+  <div class="container">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
       </ol>
-      <div class="carousel-inner" role="listbox" style=" width:100%; height: 500px !important;">
+      <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="{% static 'imgs/condos/kihei_kai_nani/bedroom_one.jpg' %}" alt="First slide">
+          <img class="d-block w-100" src="{% static 'imgs/condos/kihei_kai_nani/bath_one.jpg' %}" alt="First slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="{% static 'imgs/condos/kihei_kai_nani/bath_one.jpg' %}" alt="Second slide">
+          <img class="d-block w-100" src="{% static 'imgs/condos/kihei_kai_nani/bedroom_one.jpg' %}" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="{% static 'imgs/condos/kihei_kai_nani/kitchen_dinning.jpg' %}" alt="Third slide">
+          <img class="d-block w-100" src="{% static 'imgs/condos/kihei_kai_nani/living_two.jpg' %}" alt="Third slide">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -41,16 +44,12 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
-  </div>
 
-  <div class="container">
-    <h2>Kihei Kai Nani</h2>
-    <div class="info-container">
-      <div class="info-title">
-        <h4>Description</h4>
-      </div>
-
+    <section class="info-container">
       <div class="info-content">
+        <div class="info-title">
+          <h4>Description</h4>
+        </div>
         <p>Our 1 bed/ 1 bath, 621 sqft ground floor condo features a relaxing 4 poster
         queen size bed with high thread count Egyptian cotton sheets. Our fully
         equipped kitchen with a microwave, coffee maker, blender, toaster, all
@@ -80,16 +79,16 @@
         excellent snorkeling and swimming. Come sundown, Kamaole II Beach is a
         picturesque spot to view breathtaking sunsets.  Surrounding the Kihei Kai Nani
          are several restaurants, cafes and shops all within walking distance.</p>
+        <p>How close are we to the beach?  Watch the video below!</p>
       </div>
 
-      <div class="video">
-        <p>How close are we to the beach?  Watch the video below!</p>
-         <iframe width="560" height="315" src="https://www.youtube.com/embed/xPssDkHuEys"
+      <div class="video-container video-container-16x9">
+         <iframe src="https://www.youtube.com/embed/xPssDkHuEys"
          frameborder="0" allowfullscreen></iframe>
        </div>
-    </div>
+    </section>
 
-    <div class="amenities-container">
+    <section class="amenities">
       <div class="amenities-title">
         <h4>Amenities</h4>
       </div>
@@ -126,9 +125,9 @@
         <h5><i class="fa fa-snowflake-o" aria-hidden="true"></i> Cooling</h5>
         <p>Air Conditioner and Ceiling Fans</p>
       </div>
-    </div>
+    </section>
 
-    <div class="facilities-container">
+    <section class="facilities">
       <div class="facilities-title">
         <h4>Facilities</h4>
       </div>
@@ -144,9 +143,9 @@
         <h5><i class="fa fa-sun-o" aria-hidden="true"></i> Outside Features</h5>
         <p>Large Swimming Pool, Gas Grills, Lush Tropical Landscaping, Shuffle Board, Pavilion Deck</p>
       </div>
-    </div>
+    </section>
 
-    <div class="policies-container">
+    <section class="policies">
       <div class="policies-title">
         <h4>Policies</h4>
       </div>
@@ -162,33 +161,42 @@
         <h5><i class="fa fa-info" aria-hidden="true"></i> Misc Info</h5>
         <p>Pets Not Allowed, No Smoking, Credit Cards Accepted, Kid Friendly</p>
       </div>
-    </div>
+    </section>
   </div>
 
   <div class="footer">
-    <div class="footer-box">
-      <h4>Our VRBO Listings</h4>
-      <a href="https://www.vrbo.com/406623">Kihei Kai Nani</a><br>
-      <a href="https://www.vrbo.com/858569">Pacific Shores</a>
-    </div>
-    <div class="footer-box">
-      <h4>Contact Us</h4>
-      <a href="mailto:jeremy@stayinkihei.com" target="_top">jeremy@stayinkihei.com</a>
-      <p>(303)328-7705</p>
-    </div>
-    <div class="footer-box">
-      <h4>Social Media</h4>
-      <p>facebook</p>
-      <p>youtube</p>
-    </div>
-    <div id="tax-box" class="footer-box">
-      <h4>On Island Manager and Host</h4>
-      <a href="http://sunnymauivacations.com/">Sunny Maui Vacations</a>
-      <p>General Excise Tax - GE-105-098-2400-01<br>
-               Transient Accommodations - TA-105-098-2400-01</p>
+      <div id="listings" class="footer-box">
+        <h4>Our VRBO Listings</h4>
+        <a href="https://www.vrbo.com/406623">Kihei Kai Nani</a><br><br>
+        <a href="https://www.vrbo.com/858569">Pacific Shores</a>
+      </div>
+      <div id="contact" class="footer-box">
+        <h4>Contact Us</h4>
+        <a href="mailto:jeremy@stayinkihei.com" target="_top">jeremy@stayinkihei.com</a>
+        <p>(303)328-7705</p>
+      </div>
+      <div id="social=media" class="footer-box">
+        <h4>Social Media</h4>
+        <a href="https://www.facebook.com/StayInKihei/"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+        <br>
+        <a href="https://www.youtube.com/user/stayinkihei"><i class="fa fa-youtube-square" aria-hidden="true"></i></a>
+      </div>
+      <div id="pm" class="footer-box">
+        <h4>On Island Manager and Host</h4>
+        <a href="http://sunnymauivacations.com/">Sunny Maui Vacations</a>
+      </div>
+      <div id="tax-info" class="footer-box">
+        <h4>Tax</h4>
+        <p>General Excise Tax - GE-105-098-2400-01<br>
+           Transient Accommodations - TA-105-098-2400-01</p>
+      </div>
+      <div id="copyright" class="footer-box">
+        <h4>&copy 2017 by Stay in Kihei</h4>
+      </div>
     </div>
 
+  <script>
 
-
+  </script>
 </body>
 </html>
