guide page setup

--- a/templates/guide/guide.html
+++ b/templates/guide/guide.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="{% static 'css/guide.css' %}">
 </head>
 <body>
@@ -21,7 +22,7 @@
       <h2><a href="{% url 'activities'%}">Our Favorite Activities</a></h2>
     </div>
     <div class="restaurants">
-      <h2><a href="{% url 'places_to_eat'%}">Our Favorite Places to Eat</a></h2>
+      <h2><a href="{% url 'places_to_eat'%}">Our Favorite Restaurants</a></h2>
     </div>
     <div class="more-info">
       <h2><a href="{% url 'more_maui_info'%}">More Maui Info</a></h2>
