--- a/static/css/guide.css
+++ b/static/css/guide.css
@@ -13,7 +13,7 @@ body {
 
 
 #showcase {
-  background-image: url(../imgs/index/kamII_beach_sunset.jpg);
+  background-image: url(../imgs/guide/palms.jpg);
   height: 65vh; /*view port units (100 units in a screen)*/
   background-size: cover;
   background-position: center;
@@ -30,4 +30,171 @@ body {
   font-size: 80px;
   color: #fff;
   text-shadow: 5px 5px 10px black;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: minmax(150px, auto);
+  margin-top: 3px;
+  margin-bottom: 3px;
+  grid-gap: 3px;
+  background-color: #5C79A1;
+  grid-template-areas:
+    "beaches"
+    "activities"
+    "restaurants"
+    "more-info"
+}
+
+.container a {
+  padding: 10px;
+  color: #fff;
+  font-size: 25px;
+  text-shadow: 5px 5px 10px black;
+  text-decoration: none;
+}
+
+.container a:hover {
+    font-size: 28px;
+  }
+
+.beaches {
+  grid-area: beaches;
+  background-image: url(../imgs/guide/kam_2.jpg);
+  background-size: cover;
+  background-position: center;
+  border-radius: 5px;
+}
+
+
+.activities {
+  grid-area: activities;
+  background-image: url(../imgs/guide/honolua.jpg);
+  background-size: cover;
+  background-position: center;
+  border-radius: 5px;
+}
+
+.restaurants {
+  grid-area: restaurants;
+  background-image: url(../imgs/guide/food.jpg);
+  background-size: cover;
+  background-position: center;
+  border-radius: 5px;
+}
+
+.more-info {
+  grid-area: more-info;
+  background-image: url(../imgs/guide/flower.jpg);
+  background-size: cover;
+  background-position: center;
+  border-radius: 5px;
+}
+
+
+
+/*---footer section---*/
+.footer {
+  display: grid;
+  background-color: #1F487E;
+  color: #fff;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-areas:
+  "listings contact"
+  "social-media pm"
+  "tax-info copyright"
+}
+
+#listings {
+  grid-area: listings;
+}
+
+#contact {
+  grid-area: contact;
+}
+
+#social-media {
+  grid-area: social-media;
+}
+
+#pm {
+  grid-area: pm;
+}
+
+#tax-info {
+  grid-area: tax-info;
+}
+
+#copyright {
+  grid-area: copyright;
+}
+
+
+.footer {
+  margin-top: 10px;
+  padding: 20px;
+}
+
+.footer i {
+  font-size: 2.5em;
+}
+.footer a {
+  text-decoration: none;
+  color: #c9cdd3;
+}
+
+.footer a:hover {
+  color: #083066;
+
+}
+
+.footer p {
+  font-size: .85em;
+}
+
+.footer h4 {
+  font-size: 1em;
+  color: #fff;
+  text-decoration: underline;
+  font-style: italic;
+}
+
+.footer-box {
+  padding: 15px;
+  flex-basis: 20%;
+  text-align: center;
+
+}
+
+@media(min-width: 648px){
+.container {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-auto-rows: minmax(150px, auto);
+  margin-left: 5px;
+  margin-right: 5px;
+  grid-gap: 5px;
+  background-color: #5C79A1;
+  margin-top: 5px;
+  grid-template-areas:
+    "beaches beaches beaches activities activities activities"
+    "beaches beaches beaches activities activities activities"
+    "restaurants restaurants restaurants more-info more-info more-info"
+    "restaurants restaurants restaurants more-info more-info more-info"
+
+  }
+
+  .container a {
+    font-size: 40px;
+  }
+
+  .container a:hover {
+    font-size: 45px;
+  }
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  }
 }
