South and West Maui Beaches setup

--- a/templates/guide/beaches/beaches.html
+++ b/templates/guide/beaches/beaches.html
@@ -16,13 +16,13 @@
 
   <div class="container">
     <div class="south_beaches">
-      <h2><a href="{% url 'beaches'%}">South Maui Beaches</a></h2>
+      <h2><a href="{% url 'south_maui_beaches'%}">South Maui Beaches</a></h2>
     </div>
     <div class="west_beaches">
-      <h2><a href="{% url 'activities'%}">West Maui Beaches</a></h2>
+      <h2><a href="{% url 'west_maui_beaches'%}">West Maui Beaches</a></h2>
     </div>
     <div class="north_beaches">
-      <h2><a href="{% url 'places_to_eat'%}">North Maui Beaches</a></h2>
+      <h2><a href="{% url 'north_maui_beaches'%}">North Maui Beaches</a></h2>
     </div>
   </div>
 
