--- a/templates/guide/beaches/south_maui_beaches/south_maui_beaches.html
+++ b/templates/guide/beaches/south_maui_beaches/south_maui_beaches.html
@@ -16,31 +16,31 @@
 
   <div class="container">
     <div class="kalama">
-      <h2><a href="{% url 'south_maui_beaches'%}">Kalama Park - The Cove</a></h2>
+      <h2><a href="{% url 'kalama_park'%}">Kalama Park</a></h2>
     </div>
     <div class="kamaole">
-      <h2><a href="{% url 'west_maui_beaches'%}">Kamaole Beaches</a></h2>
+      <h2><a href="{% url 'kamaole_beaches'%}">Kamaole Beaches</a></h2>
     </div>
     <div class="keawakapu">
-      <h2><a href="{% url 'north_maui_beaches'%}">Keawakapu Beach</a></h2>
+      <h2><a href="{% url 'keawakapu'%}">Keawakapu Beach</a></h2>
     </div>
     <div class="ulua">
-      <h2><a href="{% url 'north_maui_beaches'%}">Ulua Beach</a></h2>
+      <h2><a href="{% url 'ulua'%}">Ulua Beach</a></h2>
     </div>
     <div class="wailea">
-      <h2><a href="{% url 'north_maui_beaches'%}">Wailea Beach</a></h2>
+      <h2><a href="{% url 'wailea'%}">Wailea Beach</a></h2>
     </div>
     <div class="palauea">
-      <h2><a href="{% url 'north_maui_beaches'%}">Palauea Beach</a></h2>
+      <h2><a href="{% url 'palauea'%}">Palauea Beach</a></h2>
     </div>
     <div class="poolenalena">
-      <h2><a href="{% url 'north_maui_beaches'%}">Po'olenalena Beach</a></h2>
+      <h2><a href="{% url 'poolenalena'%}">Po'olenalena Beach</a></h2>
     </div>
     <div class="maluaka">
-      <h2><a href="{% url 'north_maui_beaches'%}">Maluaka Beach</a></h2>
+      <h2><a href="{% url 'maluaka'%}">Maluaka Beach</a></h2>
     </div>
     <div class="makena">
-      <h2><a href="{% url 'north_maui_beaches'%}">Makena Beach - "Big Beach"</a></h2>
+      <h2><a href="{% url 'big_beach'%}">Makena Beach</a></h2>
     </div>
   </div>
 
